<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_granted">Access Granted</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="admob_app_id">ca-app-pub-1253592490151982~6181121553</string>
    <string name="admob_rectangle_banner_id">ca-app-pub-1253592490151982/6073248247</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="albanian">Shqip</string>
    <string name="albums_title">Albums</string>
    <string name="albumsongseparator">\n</string>
    <string name="all_title">All media</string>
    <string name="amharic">አማርኛ</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="arabic">عربى</string>
    <string name="armenian">հայերեն</string>
    <string name="artists_title">Artists</string>
    <string name="assamese">অসমীয়া</string>
    <string name="azerbaijani">Azərbaycan</string>
    <string name="bangla">বাংলা</string>
    <string name="basque">Euskara</string>
    <string name="beginning">Beginning</string>
    <string name="belarusian">Беларуская</string>
    <string name="bosnian">Bosanski</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bulgarian">български</string>
    <string name="burmese">မြန်မာ</string>
    <string name="cancel">Cancel</string>
    <string name="catalan">Català</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chinese_cn">简体中文</string>
    <string name="chinese_hk">中文香港</string>
    <string name="chinese_tw">繁體中文</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_lang">Choose your language</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="res_0x7f110043_com_crashlytics_android_build_id">33a9ffafa5be41c8869eb354c9ab6bfa</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="correct_pitch">Correct Pitch</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_create_text_prompt">Playlist name</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="croatian">Hrvatski</string>
    <string name="crossfadetimesettingsummary">Set amount of time for crossfading between songs</string>
    <string name="crossfadetimesettingtitle">Crossfade Time</string>
    <string name="czech">čeština</string>
    <string name="danish">dansk</string>
    <string name="default_web_client_id">83503940729-8tsnghqsm9f9gvr2filmmkfn8ark68fa.apps.googleusercontent.com</string>
    <string name="delete_album_desc_nosdcard">Permanently delete the entire album \"%s\" from USB storage?</string>
    <string name="delete_artist_desc_nosdcard">Permanently delete all songs by %s from USB storage?</string>
    <string name="delete_item">Delete</string>
    <string name="delete_song_desc_nosdcard">Permanently delete \"%s\" from USB storage?</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="durationformatshort">%2$d:%5$02d</string>
    <string name="dutch">Nederlands</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="effectspanel">Sound effects</string>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="enable">Enable</string>
    <string name="english">English</string>
    <string name="error_icon_content_description">Error</string>
    <string name="estonian">Eesti</string>
    <string name="exit_confirm">Confirm Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fast_scroll_alphabet"> ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="favorites">Favorites</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="filipino">Filipino</string>
    <string name="finnish">Suomalainen</string>
    <string name="force_mono_dsc">Downmix all audio to mono.</string>
    <string name="force_mono_title">Force Mono</string>
    <string name="french">Français</string>
    <string name="galician">Galego</string>
    <string name="gcm_defaultSenderId">83503940729</string>
    <string name="georgian">ქართველი</string>
    <string name="german">Deutsche</string>
    <string name="get_app">Get App</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="google_api_key">AIzaSyAfqpUQBuRV7p0UHmrs02cbFvHvE2cH1EE</string>
    <string name="google_app_id">1:83503940729:android:7776581318813de40dc0a8</string>
    <string name="google_crash_reporting_api_key">AIzaSyAfqpUQBuRV7p0UHmrs02cbFvHvE2cH1EE</string>
    <string name="google_storage_bucket">zipoapps-audio-player.appspot.com</string>
    <string name="goto_start">Library</string>
    <string name="grant_access">Grant Access</string>
    <string name="greek">Ελληνικά</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="hebrew">עִברִית</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hindi">हिंदी</string>
    <string name="hours">Hour</string>
    <string name="hungarian">Magyar</string>
    <string name="icelandic">Íslenska</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="indo">bahasa Indonesia</string>
    <string name="italian">italiano</string>
    <string name="item_view_role_description">Tab</string>
    <string name="japanese">日本語</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="kazakh">Қазақ</string>
    <string name="khmer">ខ្មែរ</string>
    <string name="korean">한국어</string>
    <string name="kyrgyz">Кыргызча</string>
    <string name="lao">ລາວ</string>
    <string name="later">Later</string>
    <string name="latvian">Latviešu</string>
    <string name="lithuanian">Lietuvių</string>
    <string name="loading">Loading…</string>
    <string name="lollipop_access_message">We have detected that access is needed. Please give full access to read/write files.</string>
    <string name="lollipop_access_title">Access Needed</string>
    <string name="no_tracks_title">No songs</string>
    <string name="ph_feature_1">HD Music Player</string>
    <string name="ph_feature_2">Playlists Support</string>
    <string name="ph_feature_3">Advanced Search</string>
    <string name="ph_feature_4">VIP Customer Support</string>
    <string name="ph_feature_5">Remove Ads</string>
    <string name="ph_offer_basic">Basic</string>
    <string name="ph_offer_premium">Premium</string>
    <string name="ph_start_free_trial">Start free trial</string>
    <string name="ph_start_like_pro">Start Like a Pro</string>
    <string name="ph_unlock_all_features">Unlock All Features</string>
    <string name="qa_make_ringtone">Ringtone</string>
    <string name="rate_dialog_subtitle">Let us know by leaving a 5 star rating</string>
    <string name="rate_dialog_thanks">Thanks!</string>
    <string name="rate_dialog_title">How do you like\nour app?</string>
    <string name="ringtone_message">Start from beginning or use our free Ringtone Maker app to edit song and assign to specific contact?</string>
</resources>