<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="@dimen/ad_dialog_width" android:layout_height="wrap_content">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="25sp" android:textColor="@color/accent" android:gravity="center" android:id="@+id/title" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/qa_make_ringtone" android:singleLine="true"/>
        <TextView android:textSize="13sp" android:textColor="#f9a825" android:id="@+id/attribution" android:paddingTop="5dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Ad" android:layout_alignParentTop="true" android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="@dimen/ad_dialog_width" android:layout_height="wrap_content" android:layout_marginTop="5dp">
        <ImageView android:layout_gravity="center" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" app:srcCompat="@drawable/ic_menu_set_as_ringtone"/>
        <TextView android:textSize="16sp" android:textColor="#ffffff" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/ringtone_message"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ad_dialog_height_margin" android:layout_marginBottom="10dp">
        <ImageView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <TextView android:textSize="18sp" android:textColor="#8d8d8d" android:gravity="center" android:id="@+id/negative" android:background="@drawable/iv_ad_btn_dec" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:minHeight="40dp" android:text="@string/beginning" android:singleLine="true"/>
        <TextView android:textSize="18sp" android:textColor="@color/accent" android:gravity="center" android:id="@+id/positive" android:background="@drawable/iv_ad_btn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:minHeight="40dp" android:text="@string/get_app" android:singleLine="true"/>
    </LinearLayout>
</LinearLayout>
