<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/scroll" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12sp" android:textColor="@color/ph_text_light" android:gravity="center_horizontal" android:id="@+id/basic_text" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16dp" android:text="@string/ph_offer_basic" android:textAllCaps="true" android:fontFamily="sans-serif-medium" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="12sp" android:textColor="@color/ph_text_light" android:gravity="center_horizontal" android:id="@+id/premium_text" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ph_offer_premium" android:textAllCaps="true" android:fontFamily="sans-serif-medium" app:layout_constraintEnd_toStartOf="@+id/basic_text" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="14sp" android:textColor="@color/relaunch_text_white" android:ellipsize="end" android:gravity="start|center_vertical" android:id="@+id/feature_1_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:text="@string/ph_feature_1" android:lines="1" android:drawablePadding="8dp" android:fontFamily="sans-serif-medium" android:textAlignment="viewStart" android:layout_marginStart="16dp" app:drawableStartCompat="@drawable/ic_ph_feature_1" app:layout_constraintEnd_toStartOf="@+id/feature_1_check" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/basic_text"/>
        <ImageView android:id="@+id/feature_1_check" android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_1_text" app:layout_constraintEnd_toEndOf="@+id/premium_text" app:layout_constraintStart_toStartOf="@+id/premium_text" app:layout_constraintTop_toTopOf="@+id/feature_1_text" app:srcCompat="@drawable/ic_feature_check"/>
        <ImageView android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_1_text" app:layout_constraintEnd_toEndOf="@+id/basic_text" app:layout_constraintStart_toStartOf="@+id/basic_text" app:layout_constraintTop_toTopOf="@+id/feature_1_text" app:srcCompat="@drawable/ic_feature_check"/>
        <TextView android:textSize="14sp" android:textColor="@color/relaunch_text_white" android:ellipsize="end" android:gravity="start|center_vertical" android:id="@+id/feature_2_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/ph_feature_2" android:lines="1" android:drawablePadding="8dp" android:fontFamily="sans-serif-medium" android:textAlignment="viewStart" android:layout_marginStart="16dp" app:drawableStartCompat="@drawable/ic_ph_feature_2" app:layout_constraintEnd_toStartOf="@+id/feature_2_check" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/feature_1_text"/>
        <ImageView android:id="@+id/feature_2_check" android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_2_text" app:layout_constraintEnd_toEndOf="@+id/premium_text" app:layout_constraintStart_toStartOf="@+id/premium_text" app:layout_constraintTop_toTopOf="@+id/feature_2_text" app:srcCompat="@drawable/ic_feature_check"/>
        <ImageView android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_2_text" app:layout_constraintEnd_toEndOf="@+id/basic_text" app:layout_constraintStart_toStartOf="@+id/basic_text" app:layout_constraintTop_toTopOf="@+id/feature_2_text" app:srcCompat="@drawable/ic_feature_check"/>
        <TextView android:textSize="14sp" android:textColor="@color/relaunch_text_white" android:ellipsize="end" android:gravity="start|center_vertical" android:id="@+id/feature_3_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/ph_feature_3" android:lines="1" android:drawablePadding="8dp" android:fontFamily="sans-serif-medium" android:textAlignment="viewStart" android:layout_marginStart="16dp" app:drawableStartCompat="@drawable/ic_ph_feature_3" app:layout_constraintEnd_toStartOf="@+id/feature_3_check" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/feature_2_text"/>
        <ImageView android:id="@+id/feature_3_check" android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_3_text" app:layout_constraintEnd_toEndOf="@+id/premium_text" app:layout_constraintStart_toStartOf="@+id/premium_text" app:layout_constraintTop_toTopOf="@+id/feature_3_text" app:srcCompat="@drawable/ic_feature_check"/>
        <ImageView android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_3_text" app:layout_constraintEnd_toEndOf="@+id/basic_text" app:layout_constraintStart_toStartOf="@+id/basic_text" app:layout_constraintTop_toTopOf="@+id/feature_3_text" app:srcCompat="@drawable/ic_feature_check"/>
        <TextView android:textSize="14sp" android:textColor="@color/relaunch_text_white" android:ellipsize="end" android:gravity="start|center_vertical" android:id="@+id/feature_4_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/ph_feature_4" android:lines="1" android:drawablePadding="8dp" android:fontFamily="sans-serif-medium" android:textAlignment="viewStart" android:layout_marginStart="16dp" app:drawableStartCompat="@drawable/ic_ph_feature_4" app:layout_constraintEnd_toStartOf="@+id/feature_4_check" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/feature_3_text"/>
        <ImageView android:id="@+id/feature_4_check" android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_4_text" app:layout_constraintEnd_toEndOf="@+id/premium_text" app:layout_constraintStart_toStartOf="@+id/premium_text" app:layout_constraintTop_toTopOf="@+id/feature_4_text" app:srcCompat="@drawable/ic_feature_check"/>
        <ImageView android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_4_text" app:layout_constraintEnd_toEndOf="@+id/basic_text" app:layout_constraintStart_toStartOf="@+id/basic_text" app:layout_constraintTop_toTopOf="@+id/feature_4_text" app:srcCompat="@drawable/ic_feature_dash"/>
        <TextView android:textSize="14sp" android:textColor="@color/relaunch_text_white" android:ellipsize="end" android:gravity="start|center_vertical" android:id="@+id/feature_5_text" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/ph_feature_5" android:lines="1" android:drawablePadding="8dp" android:fontFamily="sans-serif-medium" android:textAlignment="viewStart" android:layout_marginStart="16dp" app:drawableStartCompat="@drawable/ic_ph_feature_5" app:layout_constraintEnd_toStartOf="@+id/feature_5_check" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/feature_4_text"/>
        <ImageView android:id="@+id/feature_5_check" android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_5_text" app:layout_constraintEnd_toEndOf="@+id/premium_text" app:layout_constraintStart_toStartOf="@+id/premium_text" app:layout_constraintTop_toTopOf="@+id/feature_5_text" app:srcCompat="@drawable/ic_feature_check"/>
        <ImageView android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/feature_5_text" app:layout_constraintEnd_toEndOf="@+id/basic_text" app:layout_constraintStart_toStartOf="@+id/basic_text" app:layout_constraintTop_toTopOf="@+id/feature_5_text" app:srcCompat="@drawable/ic_feature_dash"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
