<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="#1e1e1e" android:gravity="center_horizontal" android:id="@+id/title_text" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:text="@string/ph_start_like_pro" android:lineSpacingExtra="4sp" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="16sp" android:textColor="#828282" android:gravity="center_horizontal" android:id="@+id/subtitle_text" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/ph_unlock_all_features" android:fontFamily="sans-serif-medium" app:layout_constraintTop_toBottomOf="@+id/title_text"/>
    <TextView android:textSize="60sp" android:textStyle="bold" android:textColor="@color/light_grey" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  DEBUG  \10 LAYOUT " android:lineSpacingExtra="20sp" android:rotation="-45" android:textAlignment="gravity" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/relaunch_premium_close_button" android:background="?attr/selectableItemBackgroundBorderless" android:padding="6dp" android:focusable="true" android:clickable="true" android:layout_width="42dp" android:layout_height="42dp" android:layout_margin="12dp" android:scaleType="centerCrop" android:alpha="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ph_ic_close" app:tint="#828282"/>
    <TextView android:id="@+id/relaunch_premium_purchase_button" android:layout_width="match_parent" android:layout_marginBottom="16dp" android:text="@string/ph_start_free_trial" android:includeFontPadding="false" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" style="@style/PhCtaButton"/>
    <TextView android:textSize="12sp" android:textColor="#828282" android:gravity="center_horizontal" android:id="@+id/relaunch_premium_text_price" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:lineSpacingExtra="4sp" android:translationY="-1.8sp" app:layout_constraintBottom_toTopOf="@+id/relaunch_premium_purchase_button"/>
    <ProgressBar android:orientation="horizontal" android:id="@+id/relaunch_premium_progress" android:layout_width="16dp" android:layout_height="16dp" app:layout_constraintBottom_toBottomOf="@+id/relaunch_premium_text_price" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/relaunch_premium_text_price"/>
</androidx.constraintlayout.widget.ConstraintLayout>
