<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true" app:cardCornerRadius="8dp" app:cardPreventCornerOverlap="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/ph_rate_dialog_background" android:paddingBottom="24dp" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24sp" android:textColor="@color/ph_text_dark" android:gravity="center" android:id="@+id/title" android:paddingTop="30dp" android:paddingBottom="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rate_dialog_title" android:paddingStart="42dp" android:paddingEnd="42dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
        <ImageView android:id="@+id/rate_dialog_dismiss_button" android:background="?attr/selectableItemBackgroundBorderless" android:padding="8dp" android:layout_width="42dp" android:layout_height="42dp" android:layout_margin="8dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ph_ic_close" app:tint="@color/ph_black"/>
        <TextView android:textSize="18sp" android:textColor="@color/ph_text_dark" android:gravity="center" android:id="@+id/subtitle" android:paddingTop="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rate_dialog_subtitle" android:layout_below="@+id/title" android:paddingStart="42dp" android:paddingEnd="42dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5"/>
        <ImageView android:id="@+id/rate_dialog_negative_button" android:background="?attr/selectableItemBackgroundBorderless" android:padding="8dp" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginTop="36dp" android:layout_marginRight="24dp" android:scaleType="fitCenter" app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/subtitle" app:srcCompat="@drawable/ph_ic_thumb_down"/>
        <ImageView android:id="@+id/rate_dialog_positive_button" android:background="?attr/selectableItemBackgroundBorderless" android:padding="8dp" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginLeft="24dp" android:layout_marginTop="36dp" android:scaleType="fitCenter" app:layout_constraintStart_toEndOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/subtitle" app:srcCompat="@drawable/ph_ic_thumb_up"/>
        <TextView android:textColor="@color/ph_text_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/rate_dialog_thanks" android:layout_centerHorizontal="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/rate_dialog_negative_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
